fix: wrap

--- a/src/features/dishes/Dishes.module.css
+++ b/src/features/dishes/Dishes.module.css
@@ -1,5 +1,6 @@
 .pageDishStyle {
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .headTitleStyle {
@@ -15,6 +16,7 @@
   justify-content: space-evenly;
   align-items: center;
   gap: 20px;
+  flex-wrap: wrap;
 }
 
 .boxStyle {
